--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -23,11 +23,11 @@
                 <ng-switch on="d.isTeacher">
                     <svg-icon ng-switch-when="true"
                               name="active-panel-track-student-icon"
-                              title="{{'.SHOW_STUDENT_SCREEN' | translate}}">
+                              title="{{'ACTIVE_PANEL.SHOW_STUDENT_SCREEN' | translate}}">
                     </svg-icon>
                     <svg-icon ng-switch-default
                               name="active-panel-track-teacher-icon"
-                              title="{{'.SHOW_TEACHER_SCREEN' | translate}}">
+                              title="{{'ACTIVE_PANEL.SHOW_TEACHER_SCREEN' | translate}}">
                     </svg-icon>
                 </ng-switch>
             </div>
@@ -37,7 +37,7 @@
                       ng-click="d.shareMyScreen()"
                       name="active-panel-share-screen-icon"
                       class="share-my-screen"
-                      title="{{'.SHARE_MY_SCREEN' | translate}}">
+                      title="{{'ACTIVE_PANEL.SHARE_MY_SCREEN' | translate}}">
             </svg-icon>
 
             <call-btn ng-model="d.callBtnModel"></call-btn>
