--- a/src/components/znkChat/main.scss
+++ b/src/components/znkChat/main.scss
@@ -1,4 +1,5 @@
 @import './src/scss/imports/variables',
 './src/scss/imports/colors',
 './src/scss/imports/mixins',
+'scss/chat-participants',
 'scss/znk-chat';
