--- a/src/components/znkChat/templates/znkChat.template.html
+++ b/src/components/znkChat/templates/znkChat.template.html
@@ -1,4 +1,11 @@
-<div class="znk-chat-wrapper" ng-switch="chatStateView">
-    <div class="button-wrapper" ng-switch-when="1">
+<div class="znk-chat-wrapper" ng-switch="d.chatStateView" translate-namespace="ZNK_CHAT">
+    <div class="button-wrapper" ng-switch-when="1" ng-click="d.openChat()">
+        <svg-icon name="chat-icon"></svg-icon>
+    </div>
+
+    <div class="chat-container" ng-switch-when="2">
+        <chat-participants></chat-participants>
+
+        <div class="chat-messages-board"></div>
     </div>
 </div>
