--- a/src/components/znkChat/main.scss
+++ b/src/components/znkChat/main.scss
@@ -2,4 +2,6 @@
 './src/scss/imports/colors',
 './src/scss/imports/mixins',
 'scss/chat-participants',
+'scss/chat-board',
+'scss/chatter',
 'scss/znk-chat';
