--- a/src/components/znkChat/scss/_znk-chat.scss
+++ b/src/components/znkChat/scss/_znk-chat.scss
@@ -15,6 +15,7 @@
 
     .chat-container {
         @include dimension(525px, 275px);
+        display: flex;
         border-radius: 15px;
         box-shadow: 0 0 4px 0.2px $bsColor1;
 
