--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -1,9 +1,9 @@
 <div class="chat-participants">
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
-    <div class="chatter-repeater " ng-repeat="chatter in d.chattersArr track by $index">
+    <div class="chatter-repeater " ng-repeat="chatter in d.chatParticipantsArr ">
         <div ng-click="selectChatter()(chatter)">
-            <chatter  chatter-obj="chatter"></chatter>
+            <chatter chatter-obj="chatter"></chatter>
         </div>
     </div>
 
