--- a/src/components/znkChat/scss/_chat-board.scss
+++ b/src/components/znkChat/scss/_chat-board.scss
@@ -15,6 +15,7 @@ chat-board {
             .messages-wrapper {
                 @include dimension(100%, 200px);
                 overflow-y: auto;
+                clear: both;
             }
 
             textarea{
