- working on activePanel

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -11,7 +11,7 @@ active-panel {
     }
     .active-panel {
         z-index: 9999;
-        transition: 1.5s;
+        // transition: 1.5s;
         width: 250px;
         height: 40px;
         background-color: $bgColor21;
