--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -11,12 +11,15 @@ active-panel {
     }
     .active-panel {
         z-index: 9999;
-        // transition: 1.5s;
         width: 250px;
         height: 40px;
         background-color: $bgColor21;
         border: 1px solid $bcColor11;
         border-radius: 20px;
+        &.ng-animate { transition:0s none;
+            -webkit-transition:0s none;
+            animation: 0s none;
+            -webkit-animation: 0s none; }
         svg-icon {
             &:focus {
                 outline: none;
