--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -23,11 +23,11 @@
                 <ng-switch on="d.isTeacher">
                     <svg-icon ng-switch-when="true"
                               name="active-panel-track-student-icon"
-                              title="{{'SHOW_STUDENT_SCREEN' | translate}}">
+                              title="{{d.translatedStrings.SHOW_STUDENT_SCREEN}}">
                     </svg-icon>
                     <svg-icon ng-switch-default
                               name="active-panel-track-teacher-icon"
-                              title="{{'SHOW_TEACHER_SCREEN' | translate}}">
+                              title="{{d.translatedStrings.SHOW_TEACHER_SCREEN}}">
                     </svg-icon>
                 </ng-switch>
             </div>
