- working on activePanel

--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -37,7 +37,7 @@
                       ng-click="d.shareMyScreen()"
                       name="active-panel-share-screen-icon"
                       class="share-my-screen"
-                      title="{{'SHARE_MY_SCREEN' | translate}}">
+                      title="{{d.translatedStrings.SHARE_MY_SCREEN}}">
             </svg-icon>
 
             <call-btn ng-model="d.callBtnModel"></call-btn>
