znk chat + teachers serviec

--- a/src/components/znkChat/templates/znkChat.template.html
+++ b/src/components/znkChat/templates/znkChat.template.html
@@ -8,8 +8,8 @@
         <chat-board
             user-id="userChatObj.uid"
             chat-messages="d.chatMessages"
+            chat-guid="{{d.chatGuid}}"
             chatter-obj="d.selectedChatter">
-
         </chat-board>
     </div>
 
