--- a/src/components/znkChat/templates/chatBoard.template.html
+++ b/src/components/znkChat/templates/chatBoard.template.html
@@ -4,7 +4,7 @@
     </div>
     <div class="board-wrapper">
         <div class="messages-wrapper">
-            <div ng-repeat="message in chatMessages | orderBy:'time'">
+            <div ng-repeat="message in chatterObj.chatMessages | orderBy:'time'">
                 <chat-message local-user-id="userId" message="message"></chat-message>
             </div>
         </div>
