--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -1,9 +1,14 @@
 <div class="chat-participants">
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
-    <div class="chatter-repeater " ng-repeat="chatter in chatParticipants ">
-        <div ng-click="selectChatter()(chatter)">
-            <chatter chatter-obj="chatter"></chatter>
+    <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr ">
+        <div ng-click="d.selectChatter()(chatter)">
+            <chatter
+                set-first-chatter="$index === 0 ? d.selectChatter()(chatter) : angular.noop"
+                local-user-id="d.chatData.localUserId"
+                local-user-chats-guids-arr="d.chatData.localUserChatGuidsArr"
+                chatter-obj="chatter">
+            </chatter>
         </div>
     </div>
 
