--- a/src/components/znkChat/scss/_chatter.scss
+++ b/src/components/znkChat/scss/_chatter.scss
@@ -22,28 +22,29 @@
     }
 
     .chatter-name {
-        @include text-style(16px, $fcColor14, Lato, $regularFontWeight);
+        @include text-style(16px, $fcColor6, Lato, $regularFontWeight);
         height: 23px;
     }
 
-    .messages-not-seen{
+    .message-not-seen{
         @include dimension(15px,15px);
-        @include text-style(10px, $fcColor14, Lato, $regularFontWeight); // todo
+        @include text-style(10px, $fcColor2, Lato, $regularFontWeight);
+        line-height: 15px;
         transition: 0.2s;
         display: flex;
         justify-content: center;
         align-items: center;
         color:white;
         border-radius: 50px;
-        background-color: #FF5456; // todo
+        background-color: $bgColor1;
     }
-    .messages-not-seen.ng-enter,
-    .messages-not-seen.ng-leave.ng-leave-active {
+    .message-not-seen.ng-enter,
+    .message-not-seen.ng-leave.ng-leave-active {
         opacity:0;
     }
 
-    .messages-not-seen.ng-leave,
-    .messages-not-seen.ng-enter.ng-enter-active {
+    .message-not-seen.ng-leave,
+    .message-not-seen.ng-enter.ng-enter-active {
         opacity:1;
     }
 }
