--- a/src/components/znkChat/templates/chatBoard.template.html
+++ b/src/components/znkChat/templates/chatBoard.template.html
@@ -4,15 +4,22 @@
         <svg-icon name="znk-chat-close-icon" ng-click="d.closeChat()()"></svg-icon>
     </div>
     <div class="board-wrapper">
-        <div class="messages-wrapper znk-scrollbar">
-            <div ng-repeat="message in chatterObj.chatMessages | orderBy:'time'">
-                <chat-message local-user-id="userId" message="message"></chat-message>
+        <div class="messages-container">
+            <div class="messages-wrapper znk-scrollbar">
+                <div class="message-repeater" ng-repeat="message in chatterObj.chatMessages | orderBy:'time'">
+                    <chat-message
+                        last-message="$index === chatterObj.chatMessages.length-1"
+                        scroll-to-last-message="d.scrollToLastMessage"
+                        local-user-id="userId"
+                        message="message">
+                    </chat-message>
+                </div>
             </div>
         </div>
 
-            <textarea
-                ng-keyup="$event.keyCode == 13 && d.sendMessage()"
-                ng-model="d.newMessage">
+        <textarea
+            ng-keyup="$event.keyCode == 13 && d.sendMessage()"
+            ng-model="d.newMessage">
             </textarea>
     </div>
 
