--- a/src/components/znkChat/scss/_chat-board.scss
+++ b/src/components/znkChat/scss/_chat-board.scss
@@ -30,13 +30,13 @@ chat-board {
                 padding-right: 5px;
                 .messages-wrapper {
                     @include dimension(100%, 200px);
+                    display: flex;
+                    flex-direction: column;
                     overflow-y: auto;
-                    clear: both;
 
                         .message-repeater {
-                            margin: 15px 9px;
+                            margin: 9px;
                             opacity: 1;
-                            overflow:auto;
                             height: auto;
                         }
                        .message-repeater.ng-enter {
