--- a/src/components/znkChat/templates/chatBoard.template.html
+++ b/src/components/znkChat/templates/chatBoard.template.html
@@ -1,6 +1,6 @@
 <div class="chat-board-wrapper">
     <div class="chat-board-header">
-        <chatter chatter-obj="chatterObj"></chatter>
+        <chatter ng-if="chatterObj.uid" chatter-obj="chatterObj"></chatter>
         <svg-icon name="znk-chat-close-icon" ng-click="d.closeChat()()"></svg-icon>
     </div>
     <div class="board-wrapper">
@@ -8,6 +8,7 @@
             <div class="messages-wrapper znk-scrollbar">
                 <div class="message-repeater" ng-repeat="message in chatterObj.chatMessages | orderBy:'time'">
                     <chat-message
+                        show-date="d.showDate"
                         last-message="$index === chatterObj.chatMessages.length-1"
                         scroll-to-last-message="d.scrollToLastMessage"
                         local-user-id="userId"
