--- a/src/components/znkChat/scss/_chat-message.scss
+++ b/src/components/znkChat/scss/_chat-message.scss
@@ -1,5 +1,6 @@
 chat-message {
     .message-wrapper {
+        @include text-style(14px, $fcColor6, Lato, $regularFontWeight);  // todo- get correct style
         text-align: center;
         box-sizing: border-box;
 
