--- a/src/components/znkChat/templates/chatter.template.html
+++ b/src/components/znkChat/templates/chatter.template.html
@@ -1,6 +1,7 @@
-<div class="chatter-wrapper"  ng-class="{'offline': chatterObj.presence === d.userStatus.OFFLINE,
-                                'online': chatterObj.presence === d.userStatus.ONLINE,
-                                'idle': chatterObj.presence === d.userStatus.IDLE}">
+<div class="chatter-wrapper"
+     ng-class="{'offline': chatterObj.presence === d.userStatus.OFFLINE,
+     'online': chatterObj.presence === d.userStatus.ONLINE,
+     'idle': chatterObj.presence === vm.userStatus.IDLE}">
     <div class="online-indicator"></div>
     <div class="chatter-name">{{chatterObj.name}}</div>
     <div class="message-not-seen" ng-if="chatterObj.messagesNotSeen > 0">{{chatterObj.messagesNotSeen}}</div>
