--- a/src/components/znkChat/scss/_chat-board.scss
+++ b/src/components/znkChat/scss/_chat-board.scss
@@ -67,6 +67,9 @@ chat-board {
 
             textarea{
                 @include dimension(100%, 44px);
+                @include text-style(14px, $fcColor16, Lato, $regularFontWeight);
+                @include text-style(14px, $fcColor6, Lato, $regularFontWeight);
+                padding: 5px;
                 border:none;
                 border-top: 1px solid lightgray; // todo - color --------------------------
                 box-sizing: border-box;
