--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -14,6 +14,7 @@ $fcColor12: #d2d2d2;
 $fcColor13 : #979797;
 $fcColor14 : #161616;
 $fcColor15 : #acacac;
+$fcColor16 : #c2c2c2;
 
 //background color
 $bgColor1: #ff6766;
